DEV-3541 Fix logic inversion
I was confused about which invocation was which. Fixed.